--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View GitHub Profile</a></p>
+        <p>This site is maintained by <a href="https://jingyanxu.github.io/">{{ site.github.owner_name }}</a></p>
         {% endif %}
 
         {% if site.show_downloads %}
